# zMail

./: .eslintrc.json  .gitignore  Dockerfile.lightwalletd  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  zcash.conf  zebrad.toml
app/: globals.css  layout.tsx  page.tsx
app/api/zcash/rpc/: route.ts
app/chat/: page.tsx
app/contacts/: page.tsx
app/import/: page.tsx
app/settings/: page.tsx
components/ui/: button.tsx  toast.tsx  toaster.tsx
config/: settings.ts
constants/: index.ts
hooks/: use-toast.ts
lib/: utils.ts
lib/crypto/: index.ts
lib/storage/: db.ts
lib/zcash/: blockchain.ts  client-transaction-builder.ts  memo.ts  message-service.ts  real-message-crypto.ts  real-message-service.ts  rpc-capability-detector.ts  transaction-builder.ts  transaction-router.ts  wallet.ts  zcash-rpc-client.ts
libs/zcash-wasm/: Cargo.toml  wasm-pack-build.sh
libs/zcash-wasm/src/: lib.rs
proof-service/: Cargo.toml  Dockerfile
proof-service/src/: main.rs
public/zcash-wasm/: .gitkeep
scripts/: build-groth16-wasm.ps1  build-zcash-wasm.ps1  configure-node.js  setup-zcash-node.js  test-zcash-node.js
store/: index.ts
types/: index.ts
